--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 [dependencies]
 boxcars = "0.9.11"
 pollster = "0.3.0"
-wgpu = "0.19.3"
+ash = "0.38.0+1.3.281"
 winit = "0.29.15"
 
