--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-boxcars = "0.9.11"
-pollster = "0.3.0"
+boxcars = "0.10.8"
+pollster = "0.4.0"
 ash = "0.38.0+1.3.281"
-winit = "0.29.15"
+ash-window = "0.13.0"
+winit = "0.30.12"
 
